--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             android:id="@+id/rvPersonInfo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            data="@{viewModel.viewState.personInfoList}"
             android:layout_marginBottom="12dp"
             android:clipToPadding="false"
             android:paddingBottom="16dp"
