--- a/app/src/main/res/layout/item_list_info.xml
+++ b/app/src/main/res/layout/item_list_info.xml
@@ -12,11 +12,15 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:elevation="12dp"
+        app:cardCornerRadius="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp">
 
             <TextView
                 android:id="@+id/tvGenderAndNat"
