--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             android:id="@+id/viewPager"
             android:layout_width="0dp"
             android:layout_height="250dp"
-            data="@{viewModel.viewState.personInfoList}"
+            app:viewPagerData="@{viewModel.viewState.personInfoList}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
