--- a/app/src/main/res/layout/item_carousel.xml
+++ b/app/src/main/res/layout/item_carousel.xml
@@ -49,7 +49,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="24dp"/>
 
         <TextView
@@ -57,11 +56,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="This is my Name"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@id/tvStreet"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="24dp"/>
 
 
@@ -70,11 +70,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="This is my Name"
+            android:textColor="@color/black"
+            android:textSize="18sp"
             app:layout_constraintTop_toBottomOf="@id/tvCountryAndPostCode"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="24dp"/>
 
         <TextView
@@ -82,11 +83,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="This is my Name"
+            android:textSize="14sp"
+            android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/tvTime"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="24dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
