--- a/app/src/main/res/layout/item_list_info.xml
+++ b/app/src/main/res/layout/item_list_info.xml
@@ -34,6 +34,7 @@
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 android:textStyle="normal"
+                android:layout_marginStart="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +49,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
+                android:layout_marginStart="24dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvGenderAndNat"
@@ -63,6 +65,7 @@
                 android:textColor="@color/pink"
                 android:textSize="12sp"
                 android:textStyle="normal"
+                android:layout_marginStart="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
