--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,23 +16,35 @@
         android:elevation="4dp"
         tools:context=".ui.infolist.MainActivity">
 
+        <ImageView
+            android:id="@+id/ivMenuOption"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/menu_option"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="0dp"
             android:layout_height="250dp"
             android:elevation="4dp"
-            app:cardCornerRadius="4dp"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/ivMenuOption">
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewPager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:viewPagerData="@{viewModel.viewState.personInfoList}"
-                android:layout_marginBottom="8dp"/>
+                app:viewPagerData="@{viewModel.viewState.personInfoList}" />
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
